--- a/perros/verticalalign.css
+++ b/perros/verticalalign.css
@@ -1,3 +1,17 @@
+nav {
+	display: flex;
+	align-items: center;
+	background: magenta;
+	height:500px;
+	width:250px;
+	float: left;
+}
+
+nav a {
+	width: 100%;
+	height: 100%;
+}
+
 .container {
 	background: grey;
 	height: 300px;
