--- a/perros/clase8.css
+++ b/perros/clase8.css
@@ -25,7 +25,11 @@ h1 {
 	width: 240px;
 	height: 350px;
 	margin: 15 15 15 15;
-	
+	overflow: auto;
+}
+
+.perro:nth-child(even) {
+	background:#ffff99;
 }
 
 .perro h2 {
@@ -45,9 +49,16 @@ h1 {
 	display: inline-block;
 }
 
-.perro-par {
-	background:#ffff99;
+#cocker1 {
+	display:none;
+}
 
+#cocker2 {
+	
+}
+
+#cocker3 {
+	display:none;
 }
 
 
