--- a/flex cafe/flexbox.css
+++ b/flex cafe/flexbox.css
@@ -1,5 +1,3 @@
-/* @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed'); */ 
-
 @font-face {
 	font-family: 'Roboto Condensed';
 	src:url('fonts/robotocondensed.ttf');
@@ -17,6 +15,10 @@ body {
 	background-size: cover;
 }
 
+header, article, aside, footer {
+	background: rgba(61, 38, 9, .9);
+}
+
 .contenedor {
 	display:flex;
 	justify-content: space-between;
@@ -31,10 +33,9 @@ body {
 header {
 	display:flex;
 	justify-content: space-between;
-	flex-wrap: wrap;
+	/*flex-wrap: wrap;*/
 	width: 100%;
 	height: 150px;
-	background: #3d2609;
 	margin-bottom:20px;
 	padding:20px;
 	border-radius: 25px;
@@ -46,10 +47,6 @@ header .logo {
 	justify-content: center;
 	color: white;
 	margin-left: 20px;
-
-}
-
-header img {
 
 }
 
@@ -88,6 +85,10 @@ header .menu a:active {
 	color: #3d2609;
 }
 
+header .menu-mobile {
+	display: none;
+}
+
 
 /****SECTION****/
 
@@ -101,7 +102,6 @@ header .menu a:active {
 	flex-direction:column;
 	justify-content: space-around;
 	align-items: center;
-	background: #3d2609;
 	width:100%;
 	height: 500px;
 	padding: 20px;
@@ -138,7 +138,6 @@ aside {
 	justify-content: space-around;
 	width: 35%;
 	height: 500px;
-	background: #3d2609;
 	padding: 20px;
 	border-radius: 25px;
 }
@@ -157,7 +156,6 @@ aside .ad {
 
 footer {
 	padding: 30px;
-	background: #3d2609;
 	height: 100px;
 	width: 100%;
 	margin-top: 20px;
@@ -209,19 +207,21 @@ footer .redes-sociales img:hover {
 
 
 
+
+
 	header {
 	display:flex;
 	justify-content: space-between;
-	flex-wrap: wrap;
 	width: 100%;
-	height: 150px;
+	height: 180px;
 	margin-bottom:20px;
 	padding:20px;
+	border-radius: 25px;
 }
 
-header .logo {
-	margin-left: 20px;
 
+header .logo {
+	margin-left: 10px;
 }
 
 .logo h2 {
@@ -229,16 +229,20 @@ header .logo {
 }
 
 header .menu {
-	width: 400px;
+	width: 350px;
+	display:flex;
+	flex-direction: column;
+	justify-content: space-between;
+	align-items: flex-end;
 }
 
 header .menu a {
-	padding: 10px;
+	padding: 6px;
 	border: 2px solid pink;
 	border-radius: 20px;
 	font-size: 18px;
 }
 
 
-
 }
+
