--- a/hamburger/menuhamburguesa1.css
+++ b/hamburger/menuhamburguesa1.css
@@ -60,7 +60,7 @@ body {
   display: inline-block;
   padding: 20px 20px;
   position: relative;
-  background: url('menu-icon.png') center no-repeat;
+  background: url('menu-open.png') center no-repeat;
 }
 
 .menu-mobile .hamburger {
@@ -76,5 +76,90 @@ body {
 }
 
 .menu-mobile #check-item:checked ~ .menu-icon {
+	background: url('menu-close.png') center no-repeat;
+}
+
+
+/*-------------*/
+
+.minimenu {
+  background-color: orange;
+  position: fixed;
+  top: 100px;
+  /*width: 100%;*/
+  width:55px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  /*padding: 20px;*/
+}
+
+.minimenu #hidden-checkbox {
+	display: block;
+	position: fixed;
+	top:0px;
+	left:0px;
+	
+}
+
+.minimenu ul {
+  list-style: none;
+  overflow: hidden;
+  background-color: white;
+	}
+
+.minimenu li a{
+	display: block;
+	padding: 15px;
+	text-decoration: none;
+	border-right: 1px solid #f4f4f4;
+	color:black;
+	font-family: monospace;
+	font-size: 1.5em;
+}
+
+
+.minimenu li a:hover {
+  background-color: black;
+  color:white;
+}
+
+.minimenu .dropdown-menu {
+	clear: both;
+	display:none;
+}
+
+.minimenu .menu-icon {
+  width:48px;
+  height:48px;
+  cursor: pointer;
+  display: inline-block;
+  background: url('menu-open.png') center no-repeat;
+}
+
+.minimenu .hamburger {
+   display: block; 
+}
+
+.minimenu #hidden-checkbox {
+	display: none;
+}
+
+.minimenu #hidden-checkbox:checked ~ .dropdown-menu {
+	display: block;
+	width: 100%;
+}
+
+.minimenu #hidden-checkbox:checked ~ .minimenu {
+  width:100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  padding:10px;
+}
+
+.minimenu #hidden-checkbox:checked ~ .menu-icon {
 	background: url('menu-close.png') center no-repeat;
 }
