--- a/FLI/fli.css
+++ b/FLI/fli.css
@@ -93,6 +93,43 @@ nav {
 	padding: 5px;
 }
 
+.panel-profile {
+	font-size: 16px;
+	font-family: 'Roboto',sans-serif;
+	font-weight: 300;
+	line-height: 1.6;
+}
+
+.panel-profile .panel-heading {
+	height: 150px;
+	background-size: cover;
+}
+
+.panel-profile-img {
+    max-width: 100px;
+    margin-top: -70px;
+    margin-bottom: 5px;
+    border: 3px solid #fff;
+    border-radius: 100%;
+    box-shadow: 0 1px 1px rgba(0,0,0,0.1);
+}
+
+.panel-title {
+	margin-bottom: 5px;
+	font-weight: 400;
+	margin: 6px 0;
+	line-height: 1.4;
+}
+ 
+.m-b {
+	margin-bottom: 15px !important;
+}
+
+.btn-sm {
+	font-size: 12px;
+	padding: 5px 15px;
+}
+
 footer {
 	margin-top: 10px;
 	height:40px;
